[package]
name = "hash_limette"
version = "0.1.4"
edition = "2021"
authors = ["Max Sitter <xxv.many@gmail.com>"]
description = "personal tool for obfuscation of code"
license = "MIT"
repository = "https://github.com/137-Trimethylxanthin/HashLimette"
readme = "README.md"


[dependencies]
base64 = "0.21.2"